fix: overflow errors in section

--- a/Main/style.css
+++ b/Main/style.css
@@ -1,5 +1,6 @@
 html,
 body {
+    width: 100%;
     height: 100%;
     background-color: #030303;
     color: white;
@@ -18,6 +19,10 @@ nav {
     margin-right: 237px;
     padding: 8px;
     font-size: 24px;
+}
+
+.nav-item{
+    align-items: center;
 }
 
 .home-section {
@@ -54,6 +59,7 @@ nav {
 
 
 section{
+    border: solid white 2px;
     height: 100vh;
     padding-top: 1px;
     margin-top: 120px;
@@ -109,7 +115,8 @@ section{
 
 
 
-.projects-container{
+.projects-container,
+.skills-container{
     margin-top: 96px;
     display: grid;
     grid-column: 4;
